--- a/css/styles.css
+++ b/css/styles.css
@@ -18,15 +18,18 @@ a {
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: #4d5ae5;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
 }
 span {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 
 .navigation .navigation-item-studio {
   color: #2e2f42;
   font-weight: 500;
+  letter-spacing: 0.32px;
 }
 .navigation .navigation-item-studio:hover {
   color: #404bbf;
@@ -44,6 +47,7 @@ span {
 
 .contact .contact-item {
   color: #434455;
+  letter-spacing: 0.32px;
 }
 .contact .contact-item:hover {
   color: #404bbf;
@@ -56,6 +60,9 @@ span {
 }
 .main-title .title {
   font-weight: 700;
+  font-size: 56px;
+  text-align: center;
+  letter-spacing: 1.12px;
 }
 .main-title .btn {
   cursor: pointer;
@@ -63,8 +70,16 @@ span {
   background-color: #4d5ae5;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
 }
 .main-title .btn:hover {
+  background-color: #404bbf;
+}
+.main-title .btn:focus {
   background-color: #404bbf;
 }
 
@@ -76,21 +91,52 @@ span {
 .team {
   background-color: #f4f4fd;
 }
-.team-title {
+.team .team-title {
   font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  color: #2e2f42;
 }
-.name {
+.team-information .name {
   color: #2e2f42;
   font-weight: 500;
+  background-color: #fff;
+}
+.team-information .name h3 {
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+}
+.team-information .name p {
+  color: #434455;
+  font-weight: 400;
+  letter-spacing: 0.32px;
 }
 
-.team-title {
+.portfolio .portfolio-title {
   color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
   font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
 }
-.portfolio-title {
+.portfolio-information .portfolio-item h3 {
   color: #2e2f42;
+  font-size: 20px;
   font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+}
+.portfolio-information .portfolio-item p {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.32px;
 }
 
 footer {
@@ -100,10 +146,15 @@ footer {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   text-transform: uppercase;
+  color: #4d5ae5;
+  letter-spacing: 0.54px;
+}
+span {
   color: #f4f4fd;
 }
 .footer-text {
   color: #f4f4fd;
+  letter-spacing: 0.32px;
 }
