--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a {
   line-height: 1.17;
   letter-spacing: 0.54px;
 }
-span {
+.logo-link span {
   color: #2e2f42;
 }
 
@@ -83,9 +83,15 @@ span {
   background-color: #404bbf;
 }
 
-.information-about-company .information-section {
+.information-about-company .information-section h3 {
   color: #2e2f42;
   font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+}
+.information-about-company .information-section p {
+  letter-spacing: 0.32px;
 }
 
 .team {
@@ -102,18 +108,19 @@ span {
 }
 .team-information .name {
   color: #2e2f42;
-  font-weight: 500;
   background-color: #fff;
 }
 .team-information .name h3 {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.4px;
+  font-weight: 500;
 }
 .team-information .name p {
   color: #434455;
   font-weight: 400;
   letter-spacing: 0.32px;
+  font-size: 16px;
 }
 
 .portfolio .portfolio-title {
@@ -151,7 +158,7 @@ footer {
   color: #4d5ae5;
   letter-spacing: 0.54px;
 }
-span {
+.logo-link-footer span {
   color: #f4f4fd;
 }
 .footer-text {
