--- a/css/styles.css
+++ b/css/styles.css
@@ -25,18 +25,6 @@ a {
 .logo-link span {
   color: #2e2f42;
 }
-
-.navigation .navigation-item-studio {
-  color: #2e2f42;
-  font-weight: 500;
-  letter-spacing: 0.32px;
-}
-.navigation .navigation-item-studio:hover {
-  color: #404bbf;
-}
-.navigation .navigation-item-studio:active {
-  color: #404bbf;
-}
 .navigation .navigation-item {
   color: #2e2f42;
   font-weight: 500;
@@ -44,10 +32,14 @@ a {
 .navigation .navigation-item:hover {
   color: #404bbf;
 }
+.navigation .navigation-item:focus {
+  color: #404bbf;
+}
 
 .contact .contact-item {
   color: #434455;
   letter-spacing: 0.32px;
+  font-style: normal;
 }
 .contact .contact-item:hover {
   color: #404bbf;
@@ -116,7 +108,7 @@ a {
   letter-spacing: 0.4px;
   font-weight: 500;
 }
-.team-information .name p {
+.team-information .name-text {
   color: #434455;
   font-weight: 400;
   letter-spacing: 0.32px;
